src/test/ui/mismatched_types/numeric-literal-cast.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-literal-cast.rs:6:5
   |
LL |     foo(1u8);
   |     ^^^^---^
   |         |
   |         expected `u16`, found `u8`
   |
note: function defined here
  --> $DIR/numeric-literal-cast.rs:1:4
   |
LL | fn foo(_: u16) {}
   |    ^^^ ------
help: provide an argument of the correct type
   |
LL |     foo({u16});
   |     ^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-literal-cast.rs:8:5
   |
LL |     foo1(2f32);
   |     ^^^^^----^
   |          |
   |          expected `f64`, found `f32`
   |
note: function defined here
  --> $DIR/numeric-literal-cast.rs:2:4
   |
LL | fn foo1(_: f64) {}
   |    ^^^^ ------
help: provide an argument of the correct type
   |
LL |     foo1({f64});
   |     ^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/numeric-literal-cast.rs:10:5
   |
LL |     foo2(3i16);
   |     ^^^^^----^
   |          |
   |          expected `i32`, found `i16`
   |
note: function defined here
  --> $DIR/numeric-literal-cast.rs:3:4
   |
LL | fn foo2(_: i32) {}
   |    ^^^^ ------
help: provide an argument of the correct type
   |
LL |     foo2({i32});
   |     ^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
